[package]
name = "legitima"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json", "uuid"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.71"
ory-hydra-client = { git = "https://cyberchaos.dev/leona/ory-hydra-client-rust.git" }
ldap3 = "0.9.3"
rocket_sync_db_pools = { git = "https://github.com/leona-ya/rocket_sync_db_pools_ldap", features = [ "ldap_pool" ] }
chrono = { version = "0.4.22", default-features = false, features = ["std", "clock"] }
thiserror = "1.0"
webauthn-rs = "0.3.2"
url = "2.2.2"
uuid = { version = "1", features = ["serde"] }
rocket_db_pools = { version="0.1.0-rc.2", features = ["sqlx_postgres", "deadpool_redis"] }
sqlx = { version = "0.6", features = ["offline", "json", "uuid"] }
rand = "0.8.5"
hmac = "0.12.1"
sha2 = "0.10.2"
hex = "0.4.3"
totp-rs = { version = "3.0.1", features = ["serde_support", "qr", "gen_secret"] }

[patch.crates-io]
rocket_db_pools = { git = 'https://github.com/leona-ya/rocket_db_pools'}
